# dnsolve

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pubspec.yaml
example/: main.dart
lib/: dnsolve.dart
lib/src/: _answer.dart  _question.dart  _response.dart  builder.dart  cache.dart  dnsolve.dart  exception.dart  native_bindings.dart  parsed_records.dart  statistics.dart
native/: Cargo.toml  build.bat  build.sh
native/src/: lib.rs  resolver.rs  response.rs
