[package]
name = "dnsolve_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "dnsolve_native"
crate-type = ["cdylib"]

[dependencies]
hickory-resolver = { version = "0.24", features = ["dnssec-ring"] }
hickory-proto = "0.24"
tokio = { version = "1", features = ["rt", "net", "time"] }
serde_json = "1"
libc = "0.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
